<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pui_drive</name>
  <version>1.0.0</version>
  <description>This package provides motor control calculation</description>
  <maintainer email="vincy.vcx@gmail.com">Vinci Xiao</maintainer>
  <license>Apache 2.0</license>
  <author>Vinci Xiao</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>dynamixel_sdk</depend>
  <depend>pui_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>