<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pui_msgs</name>
  <version>1.0.1</version>
  <description>ROS2 custom interface for PUI</description>
  <maintainer email="vincy.vcx@gmail.com">Vinci Xiao</maintainer>
  <license>MIT</license>
  <author>Vinci Xiao</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>buildin_interfaces</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>buildin_interfaces</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
