<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pui_uwb</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="vincy.vcx@gmail.com">vincy xiao</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>  
  <depend>geometry_msgs</depend>  
  <depend>evpi_interfaces</depend>  
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
